--- a/style.css
+++ b/style.css
@@ -257,32 +257,31 @@ table {
 }
 
 th {
-    padding: 0.5rem;
-    width: calc((max-content)+10px);
+    padding: 0.5rem ;
+  
+    display: table-cell;
+    width: max-content;
 }
 
 th div {
    
 
     border-right: 1px #172b4c solid;
-    padding-right: 15px;
+  /*   padding-right: 15px; */
     font-weight: 400;
-    width: 100%;
-    min-width: max-content;
+    
+    
+    min-width:max-content;
+ 
     resize: horizontal;
     overflow: hidden;
 }
 
-th {
-    display: table-cell;
-}
-.note{
-    min-width: 240px; 
-}
+
 td {
 
 
-    padding: 0 1rem;
+    padding: 0.5rem;
     text-align: center;
 
 }
